[package]
name = "universal_usb_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Devices_Usb",
    "Win32_Devices_DeviceAccess",
    "Win32_Storage_Compression",
    "Win32_System_Com",
    "Win32_System_Threading"
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
iced = { version = "0.5", features = ["system"] }
zip = "0.6"
tracing = "0.1"